2011-12-07 Massimo Manghi <mxmanghi@apache.org>
    * doc/examples, doc/convert_examples.tcl.in: Add ::rivet namespace to examples and
    examples code converter

2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/tablearray.tcl: new procedure 'tablearray' prints an array content
    in an HTML <table> construct. Test procedure, we maybe want to have something more
    general for printing also dictionaries.

2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * configure_ac: add new test on Tcl version using AX_VERSION_COMPARE.

2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/request.xml,doc/xml/install.xml: documenting new configure switches

2011-12-05 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: child init sets also the array module_conf to signal the
    compilation flags --enable-rivet-commands-export and --enable-import-namespace-commands
    for the benefit of init.tcl
    * configure.ac: new macro created to handle --enable-rivet-commands-export and 
    --enable-import-namespace-commands
    * rivet/init.tcl: module_conf signals when commands have to be exported from ::rivet
    and when they have to be implicitly imported into the global namespace for compatibility
    with previous versions of Rivet.

2011-11-21 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml,doc/xml/commands.xml: removed note about 'rivetlib' package
    no more needed. Notes about ServerInitScript not having effect when virtual hosts
    have their own private slave interpreters.

2011-11-20 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml,doc/xml/install.xml: documentation for building Rivet updated.
    * configure.ac: corrected help message for --disable-rivet-commands-export

2011-11-20 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: Macro definition for Rivet command objects has rolled back to 
    its previous form and doesn't call Tcl_Export anymore. In case commands are