@@ -1,4 +1,4 @@
-&lt;?
+<?
 set errlist {}
 if { [::rivet::var exists title] } {
     set title [::rivet::var get title]
@@ -9,7 +9,7 @@ if { [::rivet::var exists title] } {
 if { [::rivet::var exists salary] } {
     set salary [::rivet::var get salary]
     if { ! [string is digit $salary] } {
-    lappend errlist "Salary must be a number"
+        lappend errlist "Salary must be a number"
     }
 } else {
     lappend errlist "You need to enter a salary"
@@ -29,31 +29,31 @@ if { [::rivet::var exists skills] } {
 
 if { [llength $errlist] != 0 } {
     foreach err $errlist {
-        puts "&lt;b&gt; $err &lt;/b&gt;"
+        puts "<b> $err </b>"
     }
 } else {
     puts "Thanks for the information!"
-    ?&gt;
-    &lt;table&gt;
-      &lt;tbody&gt;
-    &lt;tr&gt;
-      &lt;td&gt;&lt;b&gt;Title:&lt;/b&gt;&lt;/td&gt;
-      &lt;td&gt;&lt;? puts $title ?&gt;&lt;/td&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-      &lt;td&gt;&lt;b&gt;Boss:&lt;/b&gt;&lt;/td&gt;
-      &lt;td&gt;&lt;? puts $boss ?&gt;&lt;/td&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-      &lt;td&gt;&lt;b&gt;Salary:&lt;/b&gt;&lt;/td&gt;
-      &lt;td&gt;&lt;? puts $salary ?&gt;&lt;/td&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-      &lt;td&gt;&lt;b&gt;Skills:&lt;/b&gt;&lt;/td&gt;
-      &lt;td&gt;&lt;? puts $skills ?&gt;&lt;/td&gt;
-    &lt;/tr&gt;
-      &lt;/tbody&gt;
-    &lt;/table&gt;
-    &lt;?
+    ?>
+    <table>
+      <tbody>
+        <tr>
+          <td><b>Title:</b></td>
+          <td><? puts $title ?></td>
+        </tr>
+        <tr>
+          <td><b>Boss:</b></td>
+          <td><? puts $boss ?></td>
+        </tr>
+        <tr>
+          <td><b>Salary:</b></td>
+          <td><? puts $salary ?></td>
+        </tr>
+        <tr>
+          <td><b>Skills:</b></td>
+          <td><? puts $skills ?></td>
+        </tr>
+      </tbody>
+    </table>
+    <?
 }
-?&gt;
+?>
